[gd_scene load_steps=6 format=3 uid="uid://b7ll3pbo26e7g"]

[ext_resource type="Texture2D" uid="uid://b40ry6f3rc7qi" path="res://images/background.png" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://dkmsubqvocf7" path="res://scripts/main_menu.gd" id="1_wu84c"]
[ext_resource type="FontFile" uid="uid://ryttacgty5xx" path="res://fonts/bitmap.ttf" id="2_ekxnf"]
[ext_resource type="PackedScene" uid="uid://cbbmkg1qqoiii" path="res://scenes/generic_button.tscn" id="4_wu84c"]
[ext_resource type="AudioStream" uid="uid://dpb1q1jf25ac2" path="res://music/menu.ogg" id="5_8ln24"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_wu84c")

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_l6cm7")

[node name="Title" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 50
text = "TwingosForest"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 70.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 35
text = "TwingosForest"
horizontal_alignment = 1

[node name="PlayButton" parent="." instance=ExtResource("4_wu84c")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -160.0
offset_right = 152.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 2
text = "mm_play"

[node name="TutorialButton" parent="." instance=ExtResource("4_wu84c")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -90.0
offset_right = 152.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
text = "mm_howto"

[node name="SettingsButton" parent="." instance=ExtResource("4_wu84c")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -20.0
offset_right = 152.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "mm_settings"

[node name="CreditsButton" parent="." instance=ExtResource("4_wu84c")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 50.0
offset_right = 152.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
text = "mm_credits"

[node name="QuitButton" parent="." instance=ExtResource("4_wu84c")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -601.0
offset_top = 254.0
offset_right = -444.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
text = "mm_quit"

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8ln24")
autoplay = true

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
